style: clean up whitespace and formatting across multiple components and stylesheets

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -8,9 +8,9 @@
   <!-- User Dropdown -->
   <div class="user-info">
     <div class="user-info__wrap">
-      <figure class="avatar"><img src="" alt=""></figure>
+      <figure class="avatar"><img alt="" src=""></figure>
       <p class="user-name">Name</p>
-      <img class="drop-down-arrow" src="/icon/drop-down-arrow.svg" alt="">
+      <img alt="" class="drop-down-arrow" src="/icon/drop-down-arrow.svg">
     </div>
   </div>
 </header>
