--- a/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
+++ b/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
@@ -1,27 +1,27 @@
 <header class="header">
-  <div class="wraper-logo">
-    <div class="logo">Online Exam Portal</div>
-    <nav class="breadcrumb">
-      <span>►</span>
-      <span>Tạo kì thi</span>
-    </nav>
-  </div>
-  <div class="return-button">
-    <button (click)="goBack()">quay lại</button>
-  </div>
+    <div class="wraper-logo">
+        <div class="logo">Online Exam Portal</div>
+        <nav class="breadcrumb">
+            <span>►</span>
+            <span>Tạo kì thi</span>
+        </nav>
+    </div>
+    <div class="return-button">
+        <button (click)="goBack()">quay lại</button>
+    </div>
 </header>
 <div class="exam-create-container">
-  <div class="option-card">
-    <img ngSrc="/icon/autoGenerateExam.png" alt="Kho học liệu" class="option-icon" height="512" width="512"/>
-    <h3>Sử dụng kho học liệu</h3>
-    <p>Sử dụng lại những câu hỏi biên soạn để sinh đề tự động</p>
-    <button class="primary-btn" (click)="navigateToECWF()">Chọn</button>
-  </div>
+    <div class="option-card">
+        <img alt="Kho học liệu" class="option-icon" height="512" ngSrc="/icon/autoGenerateExam.png" width="512"/>
+        <h3>Sử dụng kho học liệu</h3>
+        <p>Sử dụng lại những câu hỏi biên soạn để sinh đề tự động</p>
+        <button (click)="navigateToECWF()" class="primary-btn">Chọn</button>
+    </div>
 
-  <div class="option-card">
-    <img ngSrc="/icon/UpLoadFileExam.png" alt="Tải lên từ máy tính" class="option-icon" height="512" width="512"/>
-    <h3>Tải lên từ máy tính</h3>
-    <p>Tải đề bài lên từ máy tính và cấu hình bài tập mới</p>
-    <button class="primary-btn" (click)="navigateToECWF()">Bắt đầu</button>
-  </div>
+    <div class="option-card">
+        <img alt="Tải lên từ máy tính" class="option-icon" height="512" ngSrc="/icon/UpLoadFileExam.png" width="512"/>
+        <h3>Tải lên từ máy tính</h3>
+        <p>Tải đề bài lên từ máy tính và cấu hình bài tập mới</p>
+        <button (click)="navigateToECWF()" class="primary-btn">Bắt đầu</button>
+    </div>
 </div>
