--- a/src/app/pages/home/teacher-home/teacher-home.component.html
+++ b/src/app/pages/home/teacher-home/teacher-home.component.html
@@ -3,25 +3,25 @@
   <app-create-button></app-create-button>
 </app-search-bar>
 <div class="table-container">
-    <table>
-      <tbody>
-      <tr>
-        <th>Tên kỳ thi đã tạo</th>
-        <th>Ngày tạo</th>
-        <th>Trạng thái</th>
-        <th>Số lượng đề</th>
-        <th>Dạng đề bài</th>
-      </tr>
-      <tr *ngFor="let exam of exams" (click)="navigateToExamDetail(exam)">
-        <td>
-          <p class="exam-name">{{ exam.name }} - {{exam.type}}</p>
-          <p class="class-code">Mã lớp: {{ exam.examCode }}</p>
-        </td>
-        <td>{{ exam.day }}</td>
-        <td>{{ exam.status }}</td>
-        <td>{{ exam.tests}}</td>
-        <td>{{ exam.source}}</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+  <table>
+    <tbody>
+    <tr>
+      <th>Tên kỳ thi đã tạo</th>
+      <th>Ngày tạo</th>
+      <th>Trạng thái</th>
+      <th>Số lượng đề</th>
+      <th>Dạng đề bài</th>
+    </tr>
+    <tr (click)="navigateToExamDetail(exam)" *ngFor="let exam of exams">
+      <td>
+        <p class="exam-name">{{ exam.name }} - {{ exam.type }}</p>
+        <p class="class-code">Mã lớp: {{ exam.examCode }}</p>
+      </td>
+      <td>{{ exam.day }}</td>
+      <td>{{ exam.status }}</td>
+      <td>{{ exam.tests }}</td>
+      <td>{{ exam.source }}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
