--- a/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.scss
+++ b/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.scss
@@ -407,3 +407,12 @@ form {
     font-size: 10px;
   }
 }
+.row-wrapper{
+  display: flex;
+  gap: 20px;
+
+  .input-wrapper{
+    width: 50%;
+
+  }
+}
