--- a/src/app/pages/teacher/exam/with-file/exam-created-with-file-detail/exam-created-with-file-detail.component.html
+++ b/src/app/pages/teacher/exam/with-file/exam-created-with-file-detail/exam-created-with-file-detail.component.html
@@ -1,9 +1,10 @@
-<app-header></app-header>
 <div class="container">
   <div class="exam-container">
     <div class="exam-info">
-      <div class="exam-name">{{ examType }} - {{ examName }}</div>
-      <div class="examCode">Mã kỳ thi: {{ examCode }}</div>
+      <div class="columns">
+        <div class="exam-name">{{ examType }} - {{ examName }}</div>
+        <div class="examCode">Mã kỳ thi: {{ examCode }}</div>
+      </div>
       <div class="source">Dạng đề thi: file có sẵn</div>
       <div class="status">Trạng thái: {{ examStatus }}</div>
       <div class="examPassword">
@@ -56,7 +57,6 @@
       </tr>
       </tbody>
     </table>
-    <button (click)="createNewExamPaper()" class="create-button">Tạo đề mới</button>
   </div>
   <div class="exam-results-table">
     <table>
