--- a/src/app/shared/components/user-form/user-form.component.html
+++ b/src/app/shared/components/user-form/user-form.component.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Online Exam Portal</title>
-  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -15,7 +10,7 @@
   <div class="content">
     <!-- Phần avatar và thông tin người dùng -->
     <div class="profile">
-      <img alt="mặt Tỏ" class="avatar" id="avatar-image" src="avatar.jpg">
+      <img alt="mặt Tỏ" class="avatar" id="avatar-image" ngSrc="avatar.jpg">
       <div class="profile-info">
         <div class="profile-name">Phan Văn Tỏ</div>
         <!-- Input file ẩn -->
@@ -30,7 +25,7 @@
     <div class="personal-info-section">
       <h2>Thông tin cá nhân</h2>
       <form>
-        <div class="form-group">
+        <div class="form-group" >
           <input id="fullname" name="fullname" placeholder="Họ tên" type="text">
         </div>
         <div class="form-row">
@@ -82,4 +77,3 @@
   </div>
 </div>
 </body>
-</html>
