feat: remove unused HeaderComponent import from exam detail component

--- a/src/app/pages/login/student-login/student-login.component.html
+++ b/src/app/pages/login/student-login/student-login.component.html
@@ -1,5 +1,7 @@
 <app-login-form (userTypeChange)="onUserTypeChange()" [link]="'/sign-up/student'" [onLogin]="onLoginStudent">
   <div present_role>Tôi là học sinh</div>
   <div login_heading>Học sinh đăng nhập</div>
+  <app-loading *ngIf="loading" text="Login..."></app-loading>
+
 </app-login-form>
 
