--- a/src/app/layout/loading/loading.component.html
+++ b/src/app/layout/loading/loading.component.html
@@ -4,3 +4,4 @@
         <p class="loading-text">{{ text }}</p>
     </div>
 </div>
+<!--<app-loading *ngIf="loading" text="🌟Creating exam..."></app-loading>-->
