--- a/src/app/layout/loading/loading.component.scss
+++ b/src/app/layout/loading/loading.component.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5); /* Làm tối nền */
+  background-color: rgba(0, 0, 0, 0.5); /* Darken the background */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,7 +16,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px; /* Khoảng cách giữa spinner và chữ */
+  gap: 10px; /* Space between spinner and text */
 }
 
 .spinner {
