--- a/src/app/shared/components/user-form/user-form.component.scss
+++ b/src/app/shared/components/user-form/user-form.component.scss
@@ -18,10 +18,21 @@ body {
 }
 
 header {
+
   h1 {
     margin: 0;
     font-size: 24px;
     text-align: left;
+  }
+  .svg-icon {
+    cursor: pointer; // Con trỏ chuột thành hình bàn tay khi di chuột qua
+    fill: rgb(96, 182, 114);
+    transition: fill 0.3s ease; // Hiệu ứng chuyển đổi màu sắc
+    margin-top: 30px;
+    margin-left: 50px;
+  }
+  .svg-icon:hover {
+    fill: rgb(18, 132, 69); /* Màu tối hơn khi di chuột qua */
   }
 }
 
@@ -107,7 +118,7 @@ header {
   .btn {
     width: 100%; /* Nút dài bằng input */
     padding: 10px;
-    background-color: #60b672;
+    background-color: #128445;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -115,7 +126,7 @@ header {
     font-size: 14px;
 
     &:hover {
-      background-color: #218838;
+      background-color: #60b672;
     }
   }
 }
@@ -132,7 +143,7 @@ header {
   .btn-change-password {
     width: 100%; /* Nút dài bằng input */
     padding: 10px;
-    background-color: #989898; /* Màu xám */
+    background-color: #838383; /* Màu xám */
     color: #ffffff;
     border: none;
     border-radius: 5px;
