--- a/src/app/pages/student/exam/exam.component.html
+++ b/src/app/pages/student/exam/exam.component.html
@@ -1,6 +1,6 @@
 <app-header-student></app-header-student>
 <app-search-bar>
-  Tìm kỳ thi với mã
+  <app-find-button>Tìm kỳ thi theo mã</app-find-button>
 </app-search-bar>
 <div class="exam-table">
   <table>
