--- a/src/app/pages/student/exam-detail/exam-detail.component.scss
+++ b/src/app/pages/student/exam-detail/exam-detail.component.scss
@@ -1,32 +1,86 @@
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
+.exam-detail__wrap {
+  position: relative;
 
-thead {
-  background-color: #d3d3d3;
-}
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
 
-th, td {
-  padding: 12px;
-  text-align: left;
-}
+  thead {
+    background-color: #d3d3d3;
+  }
 
-th:first-child, td:first-child {
-  padding-left: 60px;
-}
+  th,
+  td {
+    padding: 12px;
+    text-align: left;
+  }
 
-tbody tr:hover {
-  background-color: #ededed;
-}
+  th:first-child,
+  td:first-child {
+    padding-left: 60px;
+  }
 
-/* Định nghĩa tỷ lệ cột */
-thead tr, tbody tr {
-  display: grid;
-  grid-template-columns: 2.5fr 1fr 1fr 1fr; // Cột 1 chiếm 2.5 phần, các cột khác mỗi cột 1 phần
-}
+  tbody tr:hover {
+    background-color: #ededed;
+  }
 
-tbody {
-  background-color: #ffffff;
-}
+  /* Định nghĩa tỷ lệ cột */
+  thead tr,
+  tbody tr {
+    display: grid;
+    grid-template-columns: 2.5fr 1fr 1fr 1fr; // Cột 1 chiếm 2.5 phần, các cột khác mỗi cột 1 phần
+  }
 
+  tbody {
+    background-color: #ffffff;
+  }
+
+  .password-form {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 99;
+    width: 500px;
+    height: 230px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background: #fff;
+
+    &.visible {
+      display: flex; // Show when visible class is added
+    }
+
+    .container {
+      h2 {
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
+      .input-container {
+        display: flex;
+        gap: 15px;
+      }
+
+      .input-box {
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        font-size: 20px;
+        border: none;
+        border-bottom: 2px solid black;
+        outline: none;
+        text-transform: uppercase;
+      }
+
+      .input-box:focus {
+        border-bottom: 2px solid blue;
+      }
+    }
+  }
+
+}
