--- a/src/app/pages/teacher/exam/with-file/exam-created-with-file-detail/exam-created-with-file-detail.component.html
+++ b/src/app/pages/teacher/exam/with-file/exam-created-with-file-detail/exam-created-with-file-detail.component.html
@@ -3,7 +3,7 @@
     <div class="exam-info">
       <div class="columns">
         <div class="exam-name">{{ examType }} - {{ examName }}</div>
-        <div class="examCode">Mã kỳ thi: {{ examCode }}</div>
+        <div class="examCode">Mã kỳ thi: {{ examID }}</div>
       </div>
       <div class="source">Dạng đề thi: file có sẵn</div>
       <div class="status">Trạng thái: {{ examStatus }}</div>
